[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/Terra.png" type="Texture" id=1]
[ext_resource path="res://scripts/cat_planet.gd" type="Script" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://sprites/Planeta2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Planeta3.png" type="Texture" id=5]
[ext_resource path="res://sprites/Planeta4.png" type="Texture" id=6]
[ext_resource path="res://sprites/Planeta5.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 124.987

[sub_resource type="CircleShape2D" id=2]
radius = 128.308

[node name="cat_planet" type="StaticBody2D"]
position = Vector2( 400, 300 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="sprites" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="sprites"]
visible = false
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )

[node name="sprite2" type="Sprite" parent="sprites"]
visible = false
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 4 )

[node name="sprite3" type="Sprite" parent="sprites"]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 5 )

[node name="sprite4" type="Sprite" parent="sprites"]
visible = false
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 6 )

[node name="sprite5" type="Sprite" parent="sprites"]
visible = false
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 7 )

[node name="light" type="Light2D" parent="."]
position = Vector2( -76.1089, -5.02626 )
scale = Vector2( 1.29473, 1.56363 )
texture = ExtResource( 3 )
energy = 2.0
range_height = -616.6

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="collision" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="collision"]
shape = SubResource( 2 )

[connection signal="area_entered" from="collision" to="." method="_on_collision_area_entered"]
